package com.hqbhoho.bigdata.design.pattern.iterator;

public interface Iterator {
    boolean hasNext();
    Object next();
}
